<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarMode</string>
    <string name="title_activity_abrir_mesa">Entrar/Abrir Mesa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="table_name">Nome da mesa</string>
    <string name="nome_mesa">Nome da mesa</string>
    <string name="tv_senha_mesa">Senha da mesa</string>
    <string name="entrar_mesa">Entrar/Abrir</string>
    <string name="title_activity_status_mesa">StatusMesa</string>
    <string name="title_activity_error_report">Relatório de erros</string>
    <string name="title_activity_fazer_pedido">Fazer Pedido</string>
    <string name="nome_produto">Nome do produto</string>
    <string name="tv_valor_produto">Valor</string>
    <string name="fazer_pedido">Fazer pedido</string>
    <string name="adicionar_cliente">Adicionar cliente</string>
    <string name="tv_nome_cliente">Nome do cliente</string>
    <string name="salvar_pedido">Salvar pedido</string>
    <string name="carregando_mesa">Carregando. Por favor aguarde...</string>
    <string name="salvando_pedido">Salvando pedido...</string>
    <string name="pedidos">Pedidos</string>
    <string name="clientes">clientes</string>
    <string name="title_activity_fechar_conta">FecharConta</string>
    <string name="total_conta">Total da conta</string>
    <string name="saldo_zerado">0</string>
    <string name="clientes_fechar">Clientes a fechar</string>
    <string name="fechar_conta">Fechar</string>

</resources>
