<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.barmode.app.Activity.FecharConta">

    <TextView
        android:text="@string/clientes_fechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_clientes_abertos"/>

    <ListView
        android:id="@+id/lv_cliente_abertos"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_clientes_abertos"
        android:layout_marginTop="10dp"
        android:choiceMode="singleChoice" />

    <TextView
        android:text="@string/total_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_cliente_abertos"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_total_conta"/>

    <TextView
        android:text="@string/saldo_zerado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_cliente_abertos"
        android:layout_alignRight="@id/tv_total_conta"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_saldo_total_conta"  />

    <Button
        android:id="@+id/btn_fechar_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_saldo_total_conta"
        android:text="@string/fechar_conta" />





</RelativeLayout>
