<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.FazerPedido">

    <TextView
        android:id="@+id/tv_nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nome_produto" />

    <EditText
        android:id="@+id/txt_nome_produto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tv_nome_produto"
        android:text="batata" />

    <TextView
        android:id="@+id/tv_valor_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nome_produto"
        android:layout_margin="10dp"
        android:text="@string/tv_valor_produto" />

    <EditText
        android:id="@+id/txt_valor_produto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_nome_produto"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/tv_valor_produto"
        android:text="10" />

    <TextView
        android:id="@+id/tv_nome_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_valor_produto"
        android:layout_margin="15dp"
        android:text="@string/tv_nome_cliente" />

    <EditText
        android:id="@+id/txt_nome_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_valor_produto"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv_nome_cliente"
        android:text="Zezinho" />

    <Button
        android:id="@+id/btn_adicionar_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/txt_valor_produto"
        android:layout_below="@id/txt_nome_cliente"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/adicionar_cliente" />

    <ListView
        android:id="@+id/lv_clientes"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_adicionar_clientes"
        android:layout_marginTop="10dp"
        android:choiceMode="singleChoice" />

    <Button
        android:id="@+id/btn_salvar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/lv_clientes"
        android:layout_below="@id/lv_clientes"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/salvar_pedido" />

</RelativeLayout>
