<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.barmode.app.Activity.AbrirMesa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nome_mesa"
        android:id="@+id/tv_nome_mesa"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/txt_nome_mesa"
        android:layout_toRightOf="@+id/tv_nome_mesa"
        android:text="Mesa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/tv_nome_mesa"
        android:text="@string/tv_senha_mesa"
        android:id="@+id/tv_senha_mesa"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/txt_nome_mesa"
        android:id="@+id/txt_senha_mesa"
        android:layout_toRightOf="@+id/tv_senha_mesa"
        android:text="Boa"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar_mesa"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_senha_mesa"
        android:layout_alignRight="@+id/txt_senha_mesa"
        android:layout_alignEnd="@+id/txt_senha_mesa"
        android:id="@+id/btn_entrar_mesa"/>


</RelativeLayout>
